# pid-lqr_controller_simulation

./: CMakeLists.txt  README.md  lqr_controller.cc  lqr_controller.h  main.cpp  matplotlibcpp.h  pid_controller.cc  pid_controller.h  sim_types.h  trajectory.cc  trajectory.h  visualizer.cc  visualizer.h  题目.txt
common/math/: linear_quadratic_regulator.cc
common/proto/: pid_conf.pb.h
control/control/: pid_controller.cc
scripts/: make_gif.py
src/: main.cpp
